After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 651417 - [PATCH] Fix segfault in Bemused plugin
[PATCH] Fix segfault in Bemused plugin
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Browser plugin (obsolete)
3.1.x
Other Linux
: Normal normal
: ---
Assigned To: totem-browser-maint
totem-browser-maint
Depends on:
Blocks:
 
 
Reported: 2011-05-29 23:37 UTC by Marcel van den Hof
Modified: 2011-07-12 14:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.01 KB, patch)
2011-05-29 23:38 UTC, Marcel van den Hof
accepted-commit_now Details | Review

Description Marcel van den Hof 2011-05-29 23:37:23 UTC
If bluetoothd is not running sdp_connect() returns a null value which
will cause the Bemused plugin to segfault.

This patch adds a check for a possible null value from sdp_connect().
Comment 1 Marcel van den Hof 2011-05-29 23:38:23 UTC
Created attachment 188852 [details] [review]
patch
Comment 2 Philip Withnall 2011-05-30 16:08:48 UTC
Review of attachment 188852 [details] [review]:

Looks good. Please commit, thanks.
Comment 3 Bastien Nocera 2011-07-12 14:05:36 UTC
commit 7232d7aea7a9943f11d4500f865e59ce0f622af2
Author: Marcel van den Hof <marcelvdh@gmail.com>
Date:   Sun May 29 23:45:36 2011 +0100

    Fix segfault in Bemused plugin
    
    If bluetoothd is not running sdp_connect() returns a null value which
    will cause the plugin to segfault.
    
    This patch adds a check for a possible null value from sdp_connect().
    
    https://bugzilla.gnome.org/show_bug.cgi?id=651417