Fix segfault in Bemused plugin

If bluetoothd is not running sdp_connect() returns a null value which
will cause the plugin to segfault.

This patch adds a check for a possible null value from sdp_connect().

https://bugzilla.gnome.org/show_bug.cgi?id=651417